Fix alignment of mobile header on some of the pages.

--- a/client/jetpack-cloud/sections/partner-portal/layout/style.scss
+++ b/client/jetpack-cloud/sections/partner-portal/layout/style.scss
@@ -1,5 +1,13 @@
 .main.partner-portal-layout {
 	padding-inline: 0;
+
+	header.current-section {
+		padding: 0 16px;
+
+		button {
+			padding: 20px 8px;
+		}
+	}
 }
 
 .partner-portal-layout__container {
